--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: lib
-        if: runner.os == 'Linux'
-        run: sudo apt-get install libsfml-dev 
-
       - name: Init
         run: cmake . -DPATCH_VERSION=${{ github.run_number }}
 
@@ -42,15 +38,15 @@ jobs:
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v4
         with:
-          name: physics-${{ runner.os }}
-          path: physics-*.zip
+          name: lab-${{ runner.os }}
+          path: lab-*.zip
 
       - name: Upload artifact
         if: runner.os == 'Linux'
         uses: actions/upload-artifact@v4
         with:
-          name: physics-${{ runner.os }}
-          path: physics-*.deb
+          name: lab-${{ runner.os }}
+          path: lab-*.deb
             
       
   release:
@@ -69,8 +65,8 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifact/physics-Linux/physics-*.deb
-            artifact/physics-Windows/physics-*.zip
+            artifact/lab-Linux/lab-*.deb
+            artifact/lab-Windows/lab-*.zip
           tag_name: 1.0.${{ github.run_number }}
           body: "Release 1.0.${{ github.run_number }}"
         env:
