--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(lab VERSION 0.1.0 LANGUAGES C CXX)
+
+set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
+set(PROJECT_VERSION 1.0.${PATCH_VERSION})
+
+project(lab VERSION ${PROJECT_VERSION})
 
 add_executable(lab)
 
@@ -12,3 +16,35 @@ target_sources(lab PRIVATE
     view/view.cpp 
 )
 
+
+target_compile_features(lab PRIVATE cxx_std_20)
+
+
+if (MSVC)
+    target_compile_options(lab PRIVATE
+        /W4
+    )
+
+else ()
+    target_compile_options(lab PRIVATE
+        -Wall -Wextra -pedantic -Werror
+    )
+
+endif()
+
+install(TARGETS lab RUNTIME DESTINATION bin)
+
+if(UNIX)
+    set(CPACK_GENERATOR "DEB")
+else ()
+    set(CPACK_GENERATOR "ZIP")
+endif()
+
+
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+set(CPACK_PACKAGE_CONTACT example@example.com)
+
+include(CPack)
